improved mail section

--- a/src/templates/email.handlebars
+++ b/src/templates/email.handlebars
@@ -43,7 +43,7 @@
 
       <!-- Content Section -->
       <div class="content">
-        <p>Hey <strong>{{name}}</strong>,</p>
+        {{!-- <p>Hey <strong>{{name}}</strong>,</p>
         <p>Your interview for the Optica JIIT Student Chapter is scheduled on
           <strong>August 28th from 5 PM to 7 PM in G3 and G4</strong>
           for both of your preferences. Your preferences are as follows:</p>
@@ -65,7 +65,8 @@
         </p>
         <p>Regards,<br />
           <strong>Optica JIIT Student Chapter</strong>
-        </p>
+        </p> --}}
+        {{{message}}}
       </div>
 
       <!-- Inquiry Section -->
